# trying-backpack

./: cabal.project
bkpfiles/: chained-instance.bkp
chained-instances/: CHANGELOG.md  chained-instances.cabal
chained-instances/A/: AInterface.hs
chained-instances/B/: AFromB.hs
chained-instances/C/: ConcreteB.hs
chained-instances/client/: A.hsig  Client.hs
chained-instances/concrete/: Concrete.hs
chained-instances/derived/: B.hsig  Derived.hs
testcases/: ChangeLog.md  testcases.cabal
testcases/concrete/: FooInstance.hs
testcases/indef/: Bar.hs
whitespace/: whitespace.cabal
whitespace/concrete/: Concrete.hs
whitespace/indef/: Util.hs
